# atos_interfaces

./: CMakeLists.txt  README.md  package.xml
msg/: ATOSHeader.msg  ActionConfiguration.msg  CartesianTolerance.msg  CartesianTrajectory.msg  CartesianTrajectoryPoint.msg  ControlSignalPercentage.msg  MONR.msg  ManoeuvreCommand.msg  Monitor.msg  ObjectDriveDirection.msg  ObjectEnabled.msg  ObjectErrorType  ObjectErrorType.msg  ObjectId.msg  ObjectIdArray.msg  ObjectState.msg  ObjectStateChange.msg  ObjectTriggerStart.msg  ReadyToArm.msg  StateChange.msg  Trajectory.msg  TrajectoryPoint.msg  Trcm.msg  TriggerConfiguration.msg  V2x.msg  V2xTriggerConfiguration.msg  driveDirection.msg
msg/ISO22133/: ActionConfiguration.msg  ExecuteAction.msg  Monitor.msg  TriggerConfiguration.msg  TriggerEventOccurred.msg
msg/V2X/: V2x.msg  V2xTriggerConfiguration.msg
srv/: GetObjectControlState.srv  GetObjectIds.srv  GetObjectIp.srv  GetObjectReturnTrajectory.srv  GetObjectTrajectory.srv  GetObjectTriggerStart.srv  GetStartOnTrigger.srv  GetTestOrigin.srv  NewMqtt2RosBridge.srv  NewRos2MqttBridge.srv  SetObjectIp.srv
